<resources>
    <string name="app_name">My Application C</string>
    <string name="enviar">Enviar</string>
    <string name="title">Data Encryption Standard with Deffie Hellman</string>
    <string name="title2">Encriptación por Texto:</string>
    <string name="inputtext">Ingrese el texto</string>
    <string name="resultado">Resultado:</string>
    <string name="title3">Encriptacion por Imagen:</string>
    <string name="selectimage">Seleccionar Imagen</string>
    <string name="file">Imagen</string>
    <string name="enviarimage">Enviar</string>
    <string name="imagen">imagen</string>
    <string name="photo">TOMAR FOTO</string>
    <string name="resptitle11">Texto Encriptado:</string>
    <string name="resptitle12">Tiempo de encriptación:</string>
    <string name="resptitle13">Tiempo de desencriptado:</string>
    <string name="resptitle4">Tiempo Total:</string>
    <string name="resptit5">Uso de memoria:</string>
    <string name="imgetitle">Imagen Encriptada:</string>
    <string name="btnfile">SELECCIONAR DOCUMENTO</string>
    <string name="analizar_datos">Analizar Datos</string>
    <string name="an_lisis_de_datos">ANÁLISIS DE DATOS</string>
    <string name="cambiar_credenciales">Cambiar Credenciales</string>
    <string name="ingrese_la_contrase_a">Ingrese la Contraseña</string>
    <string name="ingrese_p">Ingrese P:</string>
    <string name="ingrese_g">Ingrese G:</string>
    <string name="ingrese_clave_privada">Ingrese clave Privada:</string>
    <string name="ingrese_clave_publica">Ingrese clave Publica:</string>
    <string name="ingrese_su_clave">Ingrese su clave</string>
    <string name="descargar_csv">DESCARGAR CSV</string>
    <string name="uso_de_memoria">Uso de Memoria</string>
    <string name="tiempo_en_generar_a">Tiempo en Generar A</string>
    <string name="tiempo_en_encriptar">Tiempo en encriptar</string>
    <string name="tiempo_total_de_encriptaci_n">Tiempo total de encriptación</string>
    <string name="tiempo_en_generar_b">Tiempo en Generar B</string>
    <string name="tiempo_en_desencriptar">Tiempo en Desencriptar</string>
    <string name="tiempo_total_en_desencriptar">Tiempo Total en desencriptar</string>
    <string name="tiempo_total">Tiempo Total</string>
    <string name="nombre_imagenes">Nombre Imagenes</string>
    <string name="nombre_textos">Nombre Textos</string>
</resources>